# Cool-Live-Captions

./: CMakeLists.txt  README.md  THIRD-PARTY-LICENSES.md
.github/workflows/: check-build.yml  github-pages.yml  release-build.yml  release.yml
deploy/: linux-appimage.sh  linux-deb.sh  windows-installer.iss
docs/: _config.yml  index.md
include/: app_update.h  audio_linux.h  model.h
resources/: app_version.rc.in
src/: app_update.cpp  audio_linux.cpp  main.cpp  model.cpp
